# bbxyard

./: .gitignore  .npmignore  LICENSE  Makefile  README.md  package.json  pom.xml
alg/c++/: alg-sort.cpp  horce-chess.cpp  sqrt.cpp
df/1st/: bash-alpine.dockerfile  node-alpine-dev.dockerfile  node-ubuntu-dev.dockerfile  os-ubuntu.dockerfile  usage.sh
df/web/: httpd-ubuntu-dev.dockerfile
doc/: mermaid-demo.md
doc/exp/: httpd-sorted.exp
docs/: index.htm
etc/: redis-my.conf
etc/init.d/: lamppd  mongod  rbd
example/min-weapp/: package.json
example/min-weapp/src/: app.wxa
fun/c++/: zhufu.cpp
grammar/c++/: test-func-point.cpp
grammar/js/: test_args.js  test_buffer.js  test_crypto.js  test_fs.js  test_string.js
grammar/js/object/: Person.js  Rect.js
grammar/linux-c/src/: daemon.c  envtest.c  find_pid_by_name.c  so_init_fini_test.c  utf162wcs.c
grammar/python/src/: cntest.py  myzipfile.py
grammar/shell/: am-i-root.sh  func.sh  linuxmint-init.mk  loop_demo.sh  show_usage_demo.sh  signal_test.sh  str.sh
lib/cmake/: CMakeLists.txt  grammar.cmake  main.cmake  show-grammar.sh
lib/js/: fs.util.js
lib/js/app/: decodeUriName.js
lib/php/: demo.php  form.php  sutil.php
misc/: readme.md
recy/sdk/wbox/: .gitignore
ref/min-cli/: .gitignore  package.json
res/: boost-doc-wc.tar.bz2
samples/: wbox-test.cpp
scaffold/example/: index.wxp
scaffold/page/: index.wxp
scripts/: clean.sh  gulp-handler.js  md2pdf.sh  test.sh
skills/apr_demo/: Makefile  apr-md5-test.cpp
skills/cmake_demo/: CMakeLists.txt
skills/cmake_demo/src/: minus.cpp
skills/valgrind_demo/: run_valgrind.sh
src/: CMakeLists.txt  config.ts
stub/: html-sucai.tar.bz2  libevhtp-1.2.10.tar.bz2
template/: boxu-日常模版.xlsx
template/404/消失在宇宙星空中的404页面/: index.html  readme.txt
template/app/qrcode/: Qr.php
template/code/mhello/: main.cxx
template/doc/: VISA-在职模板2013.09.doc  六顶思考帽.xmind
template/shell/: usage.sh
toolkits/js/: jurl.js
toolkits/shell/: bbxyard.rc
uni-app-default/: manifest.json
uni-app-kantu/: manifest.json
uni-app-login/: manifest.json
uni-app-news/: manifest.json
usage/: Makefile  node-apk-dev-ctl.mk  node-u18-dev-ctl.mk  os-alpine-ctl.mk  os-apk-dev-ctl.mk  os-c7-ctl.mk  os-u18-ctl.mk
workspace/chello/: .cproject  .project  Makefile  chello.cpp
workspace/hexample/: .classpath  pom.xml  pom.xml~
workspace/jhello/: .project
workspace/mhello/: Makefile  hello.c  hello.h
workspace/node.js.hello/: package.json
workspace/node.js.hello/models/: fs.utils.js  user.js
workspace/node.js.hello/views/: homepage.ejs  login.ejs
yard/: .gitignore  Makefile
yard/alg/c++/: Makefile
yard/alg/python/: queue8.py
yard/apps/: Makefile
yard/apps/cms/: Makefile
yard/apps/dashboard/: Makefile
yard/apps/server/: Makefile
yard/fun/c++/: equation.cpp  ich_liebe_dich.c  logic-test.cpp  spec-number.cpp
yard/grammar/go/: .gitignore  go.mod  go.sum
yard/grammar/html/: hello-2.html  hello-ajax-0.html  hello-ajax.html  (+4 more)
yard/sdk/: .gitignore
yard/sdk/cbox/: .gitignore  CMakeLists.txt
yard/sdk/cbox/include/: cbox.h  posix_util.h
yard/sdk/cbox/src/main/: CMakeLists.txt
yard/sdk/cbox/src/test/: test_posix_util.c
yard/sdk/wbox/: CMakeLists.txt  README.md  wbox.cbp  wbox.depend  wbox.h  wbox.in.h
yard/sdk/wbox/prj.cbp/: wbox.cbp  wbox.layout
yard/sdk/wbox/samples/: CMakeLists.txt  wbox-test.cpp
yard/sdk/wbox/src/: CMakeLists.txt  http-server.c  wbox.cpp  wbox_by_evhttp_mt.cpp  wbox_ctx.hpp
yard/sdk/wbox/test/: upload-file.html
yard/skills/libevent_demo/: .gitignore  CMakeLists.txt  ev-mt-httpd.cpp  evhttp-multh-thread-httpd.cpp  http-request.cpp  libevent_demo.kdev4  main.cpp  wbox-test.cpp  wbox.h
yard/skills/libevent_demo/.kdev4/: libevent_demo.kdev4
yard/skills/libevent_demo/libevent-thread/: .kdev_include_paths
yard/skills/libevent_demo/org-sample/: CMakeLists.txt  http-server.c
(+1474 files in other folders)
